--- a/notebooks/filipa3_2018-01-23.html
+++ b/notebooks/filipa3_2018-01-23.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>pYPKp7</title>
+<title>filipa3_2018-01-23</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13121,9 +13121,64 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="pYPKp7">pYPKp7<a class="anchor-link" href="#pYPKp7">&#182;</a></h1><p>The pYPKp7 is a version of the pYPK7 with a deletion in the crp gene that originates from 
-the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw.ipynb">pYPKpw</a>.</p>
-<p>This plasmid can be linearized with ZraI or FspAI.</p>
+<h1 id="filipa3_2018-01-23-(pMEC1137)">filipa3_2018-01-23 (pMEC1137)<a class="anchor-link" href="#filipa3_2018-01-23-(pMEC1137)">&#182;</a></h1><p>This vector expresses four genes and was assembled from four single gene expression cassettes:</p>
+<table>
+<thead><tr>
+<th>Gene</th>
+<th>Enzyme</th>
+<th>Acronym</th>
+<th>Cassette</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="http://www.yeastgenome.org/locus/S000006278/overview">ScTKL1</a></td>
+<td>Transketolase</td>
+<td>TKL</td>
+<td><a href="pYPK0_PDC1_ScTKL1_RPS19b.ipynb">pYPK0_PDC1_ScTKL1_RPS19b</a></td>
+</tr>
+<tr>
+<td><a href="http://www.yeastgenome.org/locus/S000003657/overview">ScRPE1</a></td>
+<td>xylitol dehydrogenase</td>
+<td>RPE</td>
+<td><a href="pYPK0_RPS19b_ScRPE1_RPS19a.ipynb">pYPK0_RPS19b_ScRPE1_RPS19a</a></td>
+</tr>
+<tr>
+<td><a href="http://www.yeastgenome.org/locus/S000005621/overview">ScRKI1</a></td>
+<td>Xylulokinase</td>
+<td>RKI</td>
+<td><a href="pYPK0_RPS19a_ScRKI1_TPI1.ipynb">pYPK0_RPS19a_ScRKI1_TPI1</a></td>
+</tr>
+<tr>
+<td><a href="http://mic.sgmjournals.org/content/154/6/1646.full">CiGXF1</a></td>
+<td>Transaldolase</td>
+<td>GXF</td>
+<td><a href="pYPK0_TPI1_CiGXF1_ENO2.ipynb">pYPK0_TPI1_CiGXF1_ENO2</a></td>
+</tr>
+</tbody>
+</table>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a href="ypk_std_primers.ipynb">Yeast Pathway Kit Standard Primers</a></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+
+<pre><code>PDC1_ScTKL1_RPS19btp
+            RPS19b_ScRPE1_RPS19atp
+                          RPS19a_ScRKI1_TPI1tp
+                                        TPI1_CiGXF1_ENO2tp
+
+pYPK0-PDC1-ScTKL1-RPS19b-ScRPE1-RPS19a-ScRKI1-TPI1-CiGXF1-ScENO2</code></pre>
 
 </div>
 </div>
@@ -13146,7 +13201,7 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 <div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">pYPK7</span> <span class="o">=</span> <span class="n">read</span><span class="p">(</span><span class="s2">&quot;pYPK7.gb&quot;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">p567</span><span class="p">,</span><span class="n">p577</span><span class="p">,</span><span class="n">p468</span><span class="p">,</span><span class="n">p467</span><span class="p">,</span><span class="n">p568</span><span class="p">,</span><span class="n">p578</span><span class="p">,</span><span class="n">p775</span><span class="p">,</span><span class="n">p778</span><span class="p">,</span><span class="n">p167</span><span class="p">,</span><span class="n">p166</span> <span class="o">=</span> <span class="n">parse</span><span class="p">(</span><span class="s2">&quot;yeast_pahtway_kit_standard_primers.txt&quot;</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13159,10 +13214,7 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 <div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">f</span><span class="p">,</span><span class="n">r</span> <span class="o">=</span><span class="n">parse</span><span class="p">(</span><span class="s1">&#39;&#39;&#39;&gt;866_pYPKpwF (79-mer)</span>
-<span class="s1">              GCATGATATCttcacaggcggttttcgcacgtacccatg</span>
-<span class="s1">              &gt;865_pYPKpwR (79-mer)</span>
-<span class="s1">              GCATGACGTCaccagacgctatgactcacccggacggca&#39;&#39;&#39;</span><span class="p">,</span> <span class="n">ds</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">pYPKp3</span> <span class="o">=</span> <span class="n">read</span><span class="p">(</span><span class="s2">&quot;pYPKp3.gb&quot;</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13175,36 +13227,10 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">seq</span> <span class="o">=</span> <span class="n">pcr</span><span class="p">(</span><span class="n">f</span><span class="p">,</span> <span class="n">r</span><span class="p">,</span> <span class="n">pYPK7</span><span class="p">)</span>
-
-<span class="n">seq</span> <span class="o">=</span> <span class="n">seq</span><span class="o">.</span><span class="n">looped</span><span class="p">()</span>
-
-<span class="n">pYPKp7</span> <span class="o">=</span> <span class="n">seq</span><span class="o">.</span><span class="n">synced</span><span class="p">(</span><span class="n">pYPK7</span><span class="p">)</span>
-
-<span class="n">pYPKp7</span><span class="o">.</span><span class="n">stamp</span><span class="p">()</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">Bio.Restriction</span> <span class="kn">import</span> <span class="n">EcoRV</span>
 </pre></div>
 
     </div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area">
-
-    <div class="prompt output_prompt">Out[4]:</div>
-
-
-
-
-<div class="output_text output_subarea output_execute_result">
-<pre>cSEGUID_w8zCE05nnVaKMSe-K0q29kjVt4k</pre>
-</div>
-
-</div>
-
 </div>
 </div>
 
@@ -13214,31 +13240,13 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">pYPKp7</span><span class="o">.</span><span class="n">locus</span> <span class="o">=</span> <span class="s2">&quot;pYPKp7&quot;</span>
-
-<span class="n">pYPKp7</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="s2">&quot;pYPKp7.gb&quot;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">p1</span> <span class="o">=</span><span class="n">read</span><span class="p">(</span><span class="s2">&quot;pYPK0_PDC1_ScTKL1_RPS19b.gb&quot;</span><span class="p">)</span>
+<span class="n">p2</span> <span class="o">=</span><span class="n">read</span><span class="p">(</span><span class="s2">&quot;pYPK0_RPS19b_ScRPE1_RPS19a.gb&quot;</span><span class="p">)</span>
+<span class="n">p3</span> <span class="o">=</span><span class="n">read</span><span class="p">(</span><span class="s2">&quot;pYPK0_RPS19a_ScRKI1_TPI1.gb&quot;</span><span class="p">)</span>
+<span class="n">p4</span> <span class="o">=</span><span class="n">read</span><span class="p">(</span><span class="s2">&quot;pYPK0_TPI1_CiGXF1_ENO2.gb&quot;</span><span class="p">)</span>
 </pre></div>
 
     </div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area">
-
-    <div class="prompt"></div>
-
-
-
-<div class="output_html rendered_html output_subarea ">
-<font face=monospace><a href='pYPKp7.gb' target='_blank'>pYPKp7.gb</a></font><br>
-</div>
-
-</div>
-
 </div>
 </div>
 
@@ -13248,20 +13256,7 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 <div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">Bio.Restriction</span> <span class="kn">import</span> <span class="n">ZraI</span><span class="p">,</span> <span class="n">FspAI</span><span class="p">,</span> <span class="n">EcoRV</span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">pYPKp7</span><span class="o">.</span><span class="n">linearize</span><span class="p">(</span><span class="n">ZraI</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">pcr</span><span class="p">(</span> <span class="n">p775</span><span class="p">,</span> <span class="n">p778</span><span class="p">,</span> <span class="n">p3</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13274,17 +13269,32 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[7]:</div>
+    <div class="prompt output_prompt">Out[6]:</div>
 
 
 
-
-<div class="output_text output_subarea output_execute_result">
-<pre>Dseqrecord(-6180)</pre>
+<div class="output_html rendered_html output_subarea output_execute_result">
+Amplicon(2047)
 </div>
 
 </div>
 
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cas1</span>  <span class="o">=</span><span class="n">pcr</span><span class="p">(</span> <span class="n">p577</span><span class="p">,</span> <span class="n">p778</span><span class="p">,</span> <span class="n">p1</span><span class="p">)</span>
+<span class="n">cas2</span>  <span class="o">=</span><span class="n">pcr</span><span class="p">(</span> <span class="n">p775</span><span class="p">,</span> <span class="n">p778</span><span class="p">,</span> <span class="n">p2</span><span class="p">)</span>
+<span class="n">cas3</span>  <span class="o">=</span><span class="n">pcr</span><span class="p">(</span> <span class="n">p775</span><span class="p">,</span> <span class="n">p778</span><span class="p">,</span> <span class="n">p3</span><span class="p">)</span>
+<span class="n">cas4</span>  <span class="o">=</span><span class="n">pcr</span><span class="p">(</span> <span class="n">p775</span><span class="p">,</span> <span class="n">p578</span><span class="p">,</span> <span class="n">p4</span><span class="p">)</span>
+</pre></div>
+
+    </div>
 </div>
 </div>
 
@@ -13294,7 +13304,33 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">pYPKp7</span><span class="o">.</span><span class="n">linearize</span><span class="p">(</span><span class="n">FspAI</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">lin_vector</span> <span class="o">=</span> <span class="n">pYPKp3</span><span class="o">.</span><span class="n">linearize</span><span class="p">(</span><span class="n">EcoRV</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">asm</span> <span class="o">=</span> <span class="n">Assembly</span><span class="p">(</span> <span class="p">[</span><span class="n">lin_vector</span><span class="p">,</span> <span class="n">cas1</span><span class="p">,</span> <span class="n">cas2</span><span class="p">,</span> <span class="n">cas3</span><span class="p">,</span> <span class="n">cas4</span><span class="p">],</span> <span class="n">limit</span> <span class="o">=</span> <span class="mi">61</span><span class="p">)</span> <span class="c1"># This limit is important!</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">asm</span>
 </pre></div>
 
     </div>
@@ -13307,17 +13343,130 @@ the pCAPs vector. The pYPKp7 is a dominant marker version of the <a href="pYPKpw
 
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[8]:</div>
+    <div class="prompt output_prompt">Out[10]:</div>
 
 
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>Dseqrecord(-6180)</pre>
+<pre>Assembly
+fragments..: 5129bp 3904bp 2030bp 2047bp 3152bp
+limit(bp)..: 61
+G.nodes....: 12
+algorithm..: common_sub_strings</pre>
 </div>
 
 </div>
 
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[11]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">candidate</span> <span class="o">=</span> <span class="n">asm</span><span class="o">.</span><span class="n">assemble_circular</span><span class="p">()[</span><span class="mi">0</span><span class="p">]</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">candidate</span><span class="o">.</span><span class="n">figure</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt output_prompt">Out[12]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre> -|pYPKp3_lin|124
+|             \/
+|             /\
+|             124|3904bp_PCR_prod|639
+|                                 \/
+|                                 /\
+|                                 639|2030bp_PCR_prod|557
+|                                                     \/
+|                                                     /\
+|                                                     557|2047bp_PCR_prod|596
+|                                                                         \/
+|                                                                         /\
+|                                                                         596|3152bp_PCR_prod|242
+|                                                                                             \/
+|                                                                                             /\
+|                                                                                             242-
+|                                                                                                |
+ ------------------------------------------------------------------------------------------------</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">asm</span><span class="o">.</span><span class="n">assemble_circular</span><span class="p">()[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">cseguid</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt output_prompt">Out[13]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>tgvhIH110nJjoBUSnn0xajU4gk4</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+    </div>
 </div>
 </div>
 
